# flipkart-scraper-api

./: Cargo.toml  Dockerfile  build.sh  render.yaml
src/: main.rs  product.rs  search.rs
