[package]
name = "flipkart-scraper-api"
version = "0.1.0"
description = "API for scraping Flipkart product data"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/flipkart-scraper-api"
license = "MIT"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
url = "2.5.0"
reqwest = { version = "0.11.23", features = ["json"] }
scraper = "0.18.1"
thiserror = "1.0.53"
tower-http = { version = "0.5.0", features = ["cors"] }


